--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -99,3 +99,14 @@
 #li-icon, #gh-icon, #mail-icon {
     opacity: 0.5;
 }
+
+/* Styling for links */
+a, a:visited, a:active {
+    color: inherit;
+    text-decoration: none; 
+}
+
+#cube-1, #cube-2 {
+    color: white; 
+    font-size: 30px; 
+}
