--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -206,4 +206,13 @@ a, a:visited, a:active {
 #work-categories {
     text-align: center; 
     font-size: 20px; 
+    margin-top: 100px; 
+}
+
+#projects-row1 {
+    margin-top: 100px; 
+}
+
+#projects-row2 {
+    margin-top: 10px; 
 }
