add content for description and links for hangman project

--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -216,3 +216,13 @@ a, a:visited, a:active {
 #projects-row2 {
     margin-top: 10px; 
 }
+
+.project {
+    width: 300px; 
+    height: 175px; 
+}
+
+#hangman-links {
+    text-align: center; 
+    width: 100%; 
+}
