--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -222,7 +222,7 @@ a, a:visited, a:active {
     height: 175px; 
 }
 
-#hangman-links {
+#project-subtitle {
     text-align: center; 
     width: 100%; 
 }
