--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -113,7 +113,7 @@
 /* Styling for links */
 a, a:visited, a:active {
     color: inherit;
-    text-decoration: none; 
+    text-decoration: underline; 
 }
 
 #cube-1, #cube-2 {
