--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -168,6 +168,30 @@ a, a:visited, a:active {
     height: 50px; 
 }
 
+/* Styling for buttons */
+.rotate-vert-center {
+	animation: rotate-vert-center 0.5s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
+}
+
+@keyframes rotate-vert-center {
+    0% {
+        transform: rotateY(0);
+    }
+    100% {
+        transform: rotateY(360deg);
+    }
+  }
+  
+@keyframes rotate-vert-center {
+    0% {
+        transform: rotateY(0);
+    }
+    100% {
+        transform: rotateY(360deg);
+    }
+  }
+  
+
 /* PORTFOLIO PAGE SECTION STYLING PORTFOLIO PAGE SECTION STYLING PORTFOLIO PAGE SECTION STYLING PORTFOLIO PAGE SECTION STYLING*/
 #description {
     font-size: 40px; 
