--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -1,14 +1,14 @@
 #intro-page, #about-me, #work {
     height: 100vh;
     width: 100vw; 
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
     max-width: 100%; 
     max-height: 100%; 
 }
 
 #intro-page {
     background-color: rgb(238, 238, 238); 
-    color: black; 
+    color: black;
 }
 
 #about-me {
