--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -1,7 +1,7 @@
 #intro-page, #about-me, #work {
     height: 100vh;
     width: 100vw; 
-    font-family: 'Josefin Sans', sans-serif;
+    font-family: 'Oswald', sans-serif;
     max-width: 100%; 
     max-height: 100%; 
 }
@@ -113,12 +113,14 @@
     color: white;
     margin-top: 90px; 
     text-align: center; 
+    font-family: 'Josefin Sans', sans-serif;
 }
   
 #work-link {
     color: white;
     margin-top: 90px; 
     text-align: center; 
+    font-family: 'Josefin Sans', sans-serif;
 }
 
 /* Styling for contact row */
@@ -166,6 +168,7 @@ a, a:visited, a:active {
     width: 320px; 
     font-size: 33px; 
     height: 50px; 
+    font-family: 'Josefin Sans', sans-serif;
 }
 
 /* Styling for buttons */
