add event handler on click of scroll down image

--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -1,4 +1,4 @@
-#intro-page, #about-me, #work {
+#intro-page, #about-me, #work, #about-me2, #work2 {
     height: 100vh;
     width: 100vw; 
     font-family: 'Oswald', sans-serif;
