add row to show and hide with email info when user clicks on mail icon

--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -160,6 +160,10 @@
     opacity: 0.5;
 }
 
+#chat1, #chat2 {
+    justify-content: center; 
+}
+
 /* Styling for links */
 a, a:visited, a:active {
     color: inherit;
