--- a/assets/css/page-structure.css
+++ b/assets/css/page-structure.css
@@ -10,14 +10,6 @@
     background-color: rgb(238, 238, 238);  
 }
 
-#about-me {
-    background-color: white; 
-}
-
-#work {
-    background-color: rgb(205, 226, 251); 
-}
-
 /* CSS properties for flexbox */
 .row {
     display: flex; 
@@ -47,6 +39,7 @@
     vertical-align: middle; 
     background-color: white;
     font-size: 50px; 
+    position: fixed;
 }
 
 .right {
@@ -55,6 +48,8 @@
     background-color: rgb(238, 238, 238); 
     padding-left: 15px; 
     padding-right: 15px; 
+    overflow-y: auto; 
+    margin-left: 30%; 
 }
 
 /* left section: row styling  */
@@ -85,12 +80,27 @@
 }
 
 /* projects row and column */
-#work-label-row {
+#work-label-row, #stack-label-row, #stack-row {
     text-align: center; 
     font-size: 20px; 
     margin-top: 70px; 
     height: 10%; 
     justify-content: space-evenly
+}
+
+#stack-row {
+    color: grey;
+    font-size: 15px; 
+}
+
+.tech-row {
+    margin-top: 30px; 
+    justify-content: center, 
+}
+
+.tech-label-col {
+    justify-content: center;
+    margin-left: 10px
 }
 
 #projects-row1 {
@@ -110,6 +120,11 @@
 .project-subtitle {
     text-align: center; 
     width: 100%; 
+}
+
+.stack-row {
+    justify-content: center; 
+    margin-top: 30px; 
 }
 
 
