--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -89,6 +89,7 @@ a, a:visited, a:active {
 #scroll-row1, #scroll-row2 {
     justify-content: center; 
     opacity: 0.7; 
+    margin-top: auto
 }
 
 
