--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -75,4 +75,16 @@ a, a:visited, a:active {
 }
 
 
+.underline-magical {
+    background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
+    background-repeat: no-repeat;
+    background-size: 100% 0.2em;
+    background-position: 0 88%;
+}
+
+
+
+
+
+
 
