remove flex row/column class around text and add span

--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -97,6 +97,11 @@ a, a:visited, a:active {
     background-position: 0 88%;
 }
 
+#description-name {
+    font-family: 'Cookie', cursive;
+    font-size: 60px; 
+}
+
 
 
 
