--- a/assets/css/page-structure.css
+++ b/assets/css/page-structure.css
@@ -47,6 +47,9 @@
     background-color: white;
     font-size: 50px; 
     position: fixed;
+    justify-content: center; 
+    vertical-align: middle; 
+    align-content: center;  
 }
 
 .right {
@@ -57,20 +60,27 @@
     padding-right: 15px; 
     overflow-y: auto; 
     margin-left: 30%;
-    justify-content: center; 
-    vertical-align: middle;  
+    justify-content: center;  
+    position: relative; 
 }
 
-.left-main-content {
-    text-align: center; 
-    margin-top: 15%;  
+
+.left-menu-content {
+    position: absolute; 
+    top: 0; 
+}
+
+.scroll-row-content {
+    position: absolute; 
+    bottom: 0; 
+    width: 100%; 
 }
 
 /* left section: row styling  */
 .left-header-row, #propic-row, .contact-row {
     justify-content: center; 
-    vertical-align: middle; 
-    text-align: center
+    align-items: center; 
+    text-align: center; 
 } 
 
 #propic-row {
@@ -89,8 +99,9 @@
 /* right section: row styling */ 
 .menu-row {
     font-size: 15px; 
-    color: grey
+    color: grey;
 }
+
 
 .menu-home, .menu-work, .menu-about {
     height: 40px; 
@@ -119,10 +130,8 @@
 }
 
 #self-description1 {
-    height: 20%; 
     align-items: center; 
     font-size: 35px; 
-    margin-top: 30%; 
 }
 
 #self-description2 {
@@ -147,17 +156,18 @@
 
 #codinghrs-col, #coffeecups-col {
     color: grey;
-    width: 13%; 
+    width: 12%; 
     font-family: 'Roboto Slab', serif;
 }
 
-#array {
-    margin-top: 5%; 
+#coffee-icon, #coding-icon {
+    width: 5%; 
 }
 
-#coffeecups-col {
-    margin-left: 5px; 
+#array {
+    margin-top: 2%; 
 }
+
 
 
 
@@ -165,12 +175,11 @@
 #work-label-row, #stack-label-row, #stack-row {
     text-align: center; 
     font-size: 20px; 
-    height: 10%; 
     justify-content: space-evenly
 }
 
-#stack-label-row {
-    margin-top: 15%; 
+#stack-label-row, #work-label-row {
+    margin-bottom: 5%; 
 }
 
 #work-header-row {
@@ -194,11 +203,13 @@
 
 #projects-row1 {
     height: 30%;
+    justify-content: space-evenly; 
 }
 
 #projects-row2 {
     height: 30%; 
     margin-top: 10px; 
+    justify-content: space-evenly;
 }
 
 .project {
@@ -216,9 +227,149 @@
     margin-top: 30px; 
 }
 
-#coffee-icon {
-    margin-left: 20px;
+@media (max-width: 1266px){
+    .left-header-row {
+        font-size: 40px; 
+    }
+    #propic {
+        width: 270px;
+    }
+    #coffee-cups, #coding-hrs {
+        font-size: 16px; 
+    }
+    .counter-icon {
+        width: 30px; 
+    }
 }
+
+@media (max-width: 1092px){
+    .left-header-row {
+        font-size: 35px; 
+    }
+    #propic {
+        width: 250px;
+    }
+    #self-description1 {
+        font-size: 30px; 
+    }
+    #self-description2{
+        font-size: 20px; 
+    }
+}
+
+@media (max-width: 928px){
+    #propic {
+        width: 230px;
+    }
+    #self-description1 {
+        font-size: 25px; 
+    }
+    .left-header-row {
+        font-size: 30px;
+    }
+    #description-name {
+        font-size: 45px; 
+    }
+    #coffee-cups, #coding-hrs {
+        font-size: 14px; 
+    }
+    .counter-icon {
+        width: 25px; 
+    }
+    .contact-icon {
+        width: 30px; 
+    }
+    .mail-icon {
+        height: 27px; 
+        width: 27px; 
+    }
+}
+
+
+@media (max-width: 844px){
+    #propic {
+        width: 200px;
+    }
+    #self-description2{
+        font-size: 18px; 
+    }
+    #self-description3{
+        font-size: 17px; 
+    }
+    #coffee-cups, #coding-hrs {
+        font-size: 12px; 
+    }
+    .counter-icon {
+        width: 20px; 
+    }
+    #current, #move-count {
+        width: 22px; 
+    }
+    #future {
+        width: 29px; 
+    }
+}
+
+@media (max-width: 768px){
+    #propic {
+        width: 170px;
+    }
+    .left-header-row {
+        font-size: 25px;
+    }
+    #self-description1 {
+        font-size: 20px; 
+    }
+    #array {
+        font-size: 15px; 
+    }
+    #description-name {
+        font-size: 40px; 
+    }
+    #coffee-cups, #coding-hrs {
+        font-size: 10px; 
+    }
+    .counter-icon {
+        width: 15px; 
+    }
+    .scroll-row-label {
+        font-size: 12px; 
+    }
+}
+
+@media (max-width: 640px){
+    #propic {
+        width: 165px;
+    }
+    .left-header-row {
+        font-size: 20px;
+    }
+    #self-description1 {
+        font-size: 15px; 
+    }
+    #array {
+        font-size: 10px; 
+    }
+    #description-name {
+        font-size: 35px; 
+    }
+    #self-description2{
+        font-size: 16px; 
+    }
+    #self-description3{
+        font-size: 14px; 
+    }
+    #coffee-cups, #coding-hrs {
+        font-size: 10px; 
+    }
+    .counter-icon {
+        width: 10px; 
+    }
+    .scroll-row-label {
+        font-size: 10px; 
+    }
+}
+
 
 
 
