--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -40,9 +40,9 @@
     width: 60px; 
 }
 
-.mail-icon {
+/* .mail-icon {
     margin-top: 2px; 
-}
+} */
 
 #li-icon, #gh-icon, .mail-icon {
     opacity: 0.5;
@@ -78,15 +78,17 @@ a, a:visited, a:active {
 .scroll-row-label {
     opacity: 0.3;
     justify-content: center; 
-    margin-top: auto; 
-    align-content: flex-end; 
+    text-align: center; 
+    /* margin-top: auto; 
+    align-content: flex-end;  */
 }
 
 #scroll-row1, #scroll-row2 {
     justify-content: center; 
+    text-align: center; 
     opacity: 0.7; 
-    margin-top: auto;
-    margin-top: 0px; 
+    /* margin-top: auto;
+    margin-top: 0px;  */
 }
 
 
@@ -100,6 +102,10 @@ a, a:visited, a:active {
 #description-name {
     font-family: 'Cookie', cursive;
     font-size: 60px; 
+}
+
+#coding-hrs, #coffee-cups {
+    font-size: 20px; 
 }
 
 
