--- a/assets/css/page-structure.css
+++ b/assets/css/page-structure.css
@@ -372,7 +372,7 @@ body {
 
 @media (max-width: 640px){
     #propic {
-        width: 165px;
+        width: 140px;
     }
     .left-header-row {
         font-size: 20px;
@@ -401,6 +401,51 @@ body {
     .scroll-row-label {
         font-size: 10px; 
     }
+}
+@media (max-width: 530px){
+    .left {
+        /* flex-direction: row; */
+        width: 100%; 
+        max-width: 100vw; 
+        height: 30vh;
+        max-height: 30vh; 
+        overflow-x: hidden;  
+        overflow-y: hidden; 
+        z-index: 1; 
+    }
+    .right {
+        /* flex-direction: row;  */
+        width: 100%;
+        max-width: 100vw;
+        height: 70vh; 
+        max-height: 70vh; 
+        margin-top: 30vh;
+        margin-left: 0; 
+        position: absolute; 
+        overflow-x: hidden;
+        overflow-y: auto; 
+        text-align: center; 
+        vertical-align: middle; 
+    }
+    .menu-row {
+        flex-direction: column; 
+    }
+    #propic-row, .left-header-row, .contact-row {
+        margin-top: 2%; 
+    }
+    #propic {
+        width: 100px; 
+    }
+    #self-description1 {
+        font-size: 18px; 
+    }
+    #self-description3 {
+        width: 100%; 
+    }
+    #array {
+        font-size: 13px; 
+    }
+
 }
 
 
