--- a/assets/css/page-structure.css
+++ b/assets/css/page-structure.css
@@ -13,6 +13,10 @@ body {
     position: relative; 
 }
 
+p {
+    margin-bottom: 0px !important; 
+}
+
 #intro-page {
     background-color: rgb(238, 238, 238); 
 }
@@ -123,6 +127,8 @@ body {
 
 .home-icon-label, .work-icon-label, .about-icon-label {
     justify-content: center;
+    align-self: center; 
+    align-content: center; 
     margin-left: 5px
 }
 
@@ -153,7 +159,7 @@ body {
 
 #self-description3 {
     font-size: 20px;
-    width: 85%;
+    width: 97%;
     overflow-wrap: break-word;  
     text-align: justify; 
     margin-top: 10%;
@@ -180,10 +186,20 @@ body {
     margin-top: 2%; 
 }
 
-
-
-
 /* projects row and column */
+.tech-label-col {
+    width: 100%; 
+    margin-top: 3%; 
+}
+.tech-row1 {
+    text-align: center; 
+    justify-content: center; 
+}
+.tech-row {
+    text-align: center; 
+    justify-content: center; 
+}
+
 #work-label-row, #stack-label-row, #stack-row {
     text-align: center; 
     font-size: 20px; 
@@ -209,8 +225,8 @@ body {
 }
 
 .tech-label-col {
-    justify-content: center;
-    /* margin-left: 10px */
+    align-self: center; 
+    margin-left: 5%; 
 }
 
 #projects-row1 {
@@ -404,46 +420,153 @@ body {
 }
 @media (max-width: 530px){
     .left {
-        /* flex-direction: row; */
+        flex-direction: row; 
+        height: 30vh; 
         width: 100%; 
-        max-width: 100vw; 
-        height: 30vh;
-        max-height: 30vh; 
-        overflow-x: hidden;  
-        overflow-y: hidden; 
+        max-width: 100%;
+        overflow: hidden; 
         z-index: 1; 
+        /* flex-direction: row;
+        width: 100vw; 
+        max-width: 100vw; 
+        height: 30%;
+        max-height: 30%; 
+        overflow-x: hidden;  
+        z-index: 1; 
+        position: fixed; 
+        top: 0; 
+        left: 0;  */
     }
     .right {
-        /* flex-direction: row;  */
-        width: 100%;
+        flex-direction: row; 
+        height: 70vh;
+        width: 100%; 
+        max-width: 100%;
+        margin-left: 0px; 
+        margin-top: 30vh; 
+        overflow: scroll;
+        text-align: center; 
+        padding-top: 10%;
+        /* flex-direction: row; 
+        width: 100vw;
         max-width: 100vw;
-        height: 70vh; 
-        max-height: 70vh; 
-        margin-top: 30vh;
+        height: 70%; 
+        max-height: 70%; 
+        margin-top: 30%;
         margin-left: 0; 
         position: absolute; 
         overflow-x: hidden;
-        overflow-y: auto; 
+        overflow-y: scroll; 
+        overflow: scroll; 
         text-align: center; 
-        vertical-align: middle; 
+        vertical-align: middle;  */
     }
-    .menu-row {
-        flex-direction: column; 
+
+    .column {
+        display: initial;
     }
-    #propic-row, .left-header-row, .contact-row {
+
+    .right2 {
+        margin-top: 0px; 
+        padding-top: 30vh; 
+        height: 100vh; 
+    }
+
+    #work-header-row, #propic-row {
+        margin-top: 3%; 
+    }
+
+    .contact-row, a {
         margin-top: 2%; 
+        height: 2%;
     }
+
+    p {
+        margin-bottom: 0px; 
+    }
+
     #propic {
-        width: 100px; 
+        width: 15%; 
     }
-    #self-description1 {
-        font-size: 18px; 
+
+    #about-me2 {
+        margin-top: 0px; 
     }
-    #self-description3 {
+
+    #work-label-row, .left-header-row {
+        margin-top: 4%;
+    }
+
+    .contact-icon{
+        width: 25px; 
+    }
+
+    .mail-icon{
+        width: 22px;
+        height: 22px;
+    }
+
+    #chat2, #chat3 {
+        font-size: 10px; 
+    }
+    .tech-icon {
+        width: 20px; 
+    }
+    /* .tech-label-col {
         width: 100%; 
+        margin-top: 3%; 
     }
-    #array {
-        font-size: 13px; 
+    .tech-row1 {
+        text-align: center; 
+        justify-content: center; 
+    }
+    .tech-row {
+        text-align: center; 
+        justify-content: center; 
+    } */
+    .home-icon-label, .work-icon-label, .about-icon-label {
+        font-size: 12px; 
+    }
+}
+
+@media (max-width: 400px){
+    #stack-label-row{
+        font-size: 12px; 
+    }
+}
+
+@media (max-width: 370px){
+    #stack-label-row{
+        font-size: 10px; 
+    }
+    .left-header-row, #work-header-row {
+        font-size: 17px; 
+    }
+    #self-description1{
+        font-size: 12px; 
+    }
+    #description-name {
+        font-size: 22px; 
+    }
+    #self-description2{
+        font-size: 12px; 
+    }
+    #self-description3{
+        font-size: 11px; 
+    }
+    .tech-icon {
+        width: 16px; 
+    }
+    .tech-label-col {
+        font-size: 8px; 
+    }
+    .contact-icon{
+        width: 20px; 
+    }
+
+    .mail-icon{
+        width: 17px;
+        height: 17px;
     }
 
 }
