--- a/assets/css/page-structure.css
+++ b/assets/css/page-structure.css
@@ -426,16 +426,6 @@ p {
         max-width: 100%;
         overflow: hidden; 
         z-index: 1; 
-        /* flex-direction: row;
-        width: 100vw; 
-        max-width: 100vw; 
-        height: 30%;
-        max-height: 30%; 
-        overflow-x: hidden;  
-        z-index: 1; 
-        position: fixed; 
-        top: 0; 
-        left: 0;  */
     }
     .right {
         flex-direction: row; 
@@ -447,19 +437,6 @@ p {
         overflow: scroll;
         text-align: center; 
         padding-top: 10%;
-        /* flex-direction: row; 
-        width: 100vw;
-        max-width: 100vw;
-        height: 70%; 
-        max-height: 70%; 
-        margin-top: 30%;
-        margin-left: 0; 
-        position: absolute; 
-        overflow-x: hidden;
-        overflow-y: scroll; 
-        overflow: scroll; 
-        text-align: center; 
-        vertical-align: middle;  */
     }
 
     .column {
@@ -513,20 +490,13 @@ p {
     .tech-icon {
         width: 20px; 
     }
-    /* .tech-label-col {
-        width: 100%; 
-        margin-top: 3%; 
-    }
-    .tech-row1 {
-        text-align: center; 
-        justify-content: center; 
-    }
-    .tech-row {
-        text-align: center; 
-        justify-content: center; 
-    } */
     .home-icon-label, .work-icon-label, .about-icon-label {
         font-size: 12px; 
+    }
+}
+@media (max-width: 415px){
+    #my-name-row {
+        font-size: 26px; 
     }
 }
 
