add media query for chat1

--- a/assets/css/page-structure.css
+++ b/assets/css/page-structure.css
@@ -487,6 +487,11 @@ p {
         font-size: 10px;
         height: 5%;  
     }
+
+    #chat1 {
+        margin-top: -10%; 
+    }
+    
     .tech-icon {
         width: 20px; 
     }
