keep cube columns flex even on media queries

--- a/assets/css/page-structure.css
+++ b/assets/css/page-structure.css
@@ -443,6 +443,10 @@ p {
         display: initial;
     }
 
+    .cube {
+        display: flex; 
+    }
+
     .right2 {
         margin-top: 0px; 
         padding-top: 30vh; 
