edit margin top on self description 2

--- a/assets/css/page-structure.css
+++ b/assets/css/page-structure.css
@@ -466,6 +466,10 @@ p {
         margin-top: 20%; 
     }
 
+    #self-description2 {
+        margin-top: 10%; 
+    }
+
     .column {
         display: initial;
     }
