--- a/assets/css/page-structure.css
+++ b/assets/css/page-structure.css
@@ -57,6 +57,7 @@ p {
     width: 30%; 
     max-width: 30%; 
     height: 100vh; 
+    max-height: 100%; 
     background-color: white;
     font-size: 50px; 
     position: fixed;
@@ -70,6 +71,7 @@ p {
     width: 70%; 
     max-width: 70%;
     height: 100vh;  
+    max-height: 100%; 
     background-color: rgb(238, 238, 238); 
     padding-left: 15px; 
     padding-right: 15px; 
